Polish Java Backend based on SonarLint scan Refactor `WebSocketSecurityConfig` to reduce the understanding complexity. Change the names of `MLWorkerAction` enums to match Java naming convention. Remove unused legacy functions and imports. Remove duplicated error type in `MLWorkerIllegalReplyException`. Remove `MLWorkerService`, `GRPCMapper` references in WebSocket.